test/stage2/test_11810517_8.out
Error Type 8 at Line 8: function’s return value type mismatches the declared type