test/stage2/test_11810517_8.spl
struct st {
	int x;
};

struct st f(int z) {
	struct st s;
	if (z == 1) return s;
	else return s.x;
}